Closed Bug 300024 Opened 21 years ago Closed 21 years ago

Assertion in nsXULElement when XUL buttons are placed in a HTML document

Categories

(Core :: XUL, defect)

defect
Not set
normal

Tracking

()

VERIFIED FIXED

People

(Reporter: whimboo, Assigned: bugs.caleb)

References

Details

Attachments

(1 file, 1 obsolete file)

1.19 KB, patch
bugs.caleb
: review+
bugs.caleb
: superreview+
benjamin
: approval1.8b4+
Details | Diff | Splinter Review
Seen this while including a XUL button into the new netError.xhtml. <!-- Retry Button --> <xul:button xmlns:xul="http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul"/> When I click on that button to reload the document, following assertion is thrown: ###!!! ASSERTION: not an nsIDOMXULDocument: 'domxuldoc != nsnull', file ../../../../../../mozilla/content/xul/content/src/nsXULElement.cpp, line 2560
The assert is just bogus and should be removed, imo.
Attached patch patch v1.0 (obsolete) — Splinter Review
This just removes the assertion
Attachment #189582 - Flags: review?(bzbarsky)
Comment on attachment 189582 [details] [diff] [review] patch v1.0 No need for the newline, and r+sr=bzbarsky
Attachment #189582 - Flags: superreview+
Attachment #189582 - Flags: review?(bzbarsky)
Attachment #189582 - Flags: review+
Attached patch patch v1.1Splinter Review
Carrying over s/sr, requesting for approval.
Assignee: nobody → bugs.caleb
Attachment #189582 - Attachment is obsolete: true
Status: NEW → ASSIGNED
Attachment #189609 - Flags: superreview+
Attachment #189609 - Flags: review+
Attachment #189609 - Flags: approval1.8b4?
Attachment #189609 - Flags: approval1.8b4? → approval1.8b4+
Whiteboard: [checkin needed]
Checking in nsXULElement.cpp; /cvsroot/mozilla/content/xul/content/src/nsXULElement.cpp,v <-- nsXULElement.cpp new revision: 1.578; previous revision: 1.577 done
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Whiteboard: [checkin needed]
Status: RESOLVED → VERIFIED
OS: Linux → All
Hardware: PC → All
Component: XP Toolkit/Widgets: XUL → XUL
QA Contact: xptoolkit.xul → xptoolkit.widgets
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: