bug 300024 remove assertion when putting XUL buttons in an XHTML document patch by Caleb <bugs.caleb@gmail.com> r+sr=bz a=bsmedberg